h1. CHANGELOG

h2. 2.4.2 July 10, 2013

* add 'rails-bootstrap' example application to the 'apps4' recipe
* remove creation of 'generators.rb' file (it was never used) from 'layout.erb'
* remove 'sdoc' gem from Rails 4 generated Gemfile

h2. 2.4.1 June 25, 2013

* add 'protected_attributes' gem for Rails 4.0
* fix devise 'routes.rb' file for Rails 4.0
* fix cancan 'seeds.rb' file for Rails 4.0
* add gem paths reload command to fix 'html2haml' requirement
* upgrade 'simple_form' gem to '3.0.0.rc' for Rails 4.0

h2. 2.4.0 June 24, 2013

* preliminary menus for Rails 4.0
* add 'apps4' recipe with 'learn-rails' example application
* remove 'simple-test' example application
* add the Ruby version to the Gemfile

h2. 2.3.2 June 24, 2013

* attempt to resolve issue #148 and #220 (failures caused by conflicting gem versions)

h2. 2.3.1 June 22, 2013

* add 'simple-test' example application to diagnose issue #220

h2. 2.3.0 June 22, 2013

* allow Rails 4.0, warn to check for GitHub issues
* don't specify gem versions (Bundler manages updates)
* assign gems to groups in Gemfile (contributed by R2dR)
* add source signposts to generated templates (contributed by Mark D. Blackwell)

h2. 2.2.42 June 20, 2013

* fix prod_webserver handling (contributed by Vitaly Kushner)
* update recipe for rails-prelaunch-signup app (only require capybara-webkit in test)
* update recipe for rails-prelaunch-signup app (replace selenium with capybara-webkit)

h2. 2.2.41 May 23, 2013

* update recipe for rails-prelaunch-signup app (add selenium-webdriver gem)

h2. 2.2.40 April 19, 2013

* update recipe for rails-prelaunch-signup app

h2. 2.2.39 April 2, 2013

* support for continuous testing using Guard (contributed by Paavo Leinonen)

h2. 2.2.38 March 29, 2013

* in 'extras' recipe, use .ruby-version and .ruby-gemset instead of .rvmrc file

h2. 2.2.37 March 26, 2013

* accommodate old Ruby syntax in 'gems' recipe
* fix 'gems' recipe to provide 'pg' or 'mysql2' gems if requested